# ghit

./: .gitignore  Cargo.toml  README.md  ghit.toml
.github/workflows/: release.yaml
scripts/: build.sh
src/: config.rs  git.rs  llm.rs  main.rs  workflow.rs
