[package]
name = "ghit"
version = "0.1.0"
edition = "2021"
description = "AI-powered Git commit message generator and workflow automation"
authors = ["Evis Drenova"]
license = "MIT"
repository = "https://github.com/evisdrenova/ghit"
homepage = "https://github.com/evisdrenova/ghit"
readme = "README.md"
keywords = ["git", "ai", "commit", "cli", "automation", "rust","llm","openai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
json = "0.12.4"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.23"
